--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .header {
     display: flex;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 ul {
     display: flex;
-    align-items: stretch;
-    justify-content: space-around;
+    justify-content: flex-end;
     width: 100%;
-    flex: 1 0 auto;
+    gap: 30px;
 }
 
 li {
     list-style-type: none;
     flex: 0 1 auto;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
