--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    min-height: 100vh;
 }
 
 .header {
@@ -9,12 +10,20 @@ body {
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 24px;
+    padding-left: 125px;
+    padding-right: 125px;
 }
 
 h2 {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    margin-bottom: -10px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
 
 .awesome {
@@ -28,9 +37,13 @@ h2 {
 .someinfo {
     display: flex;
     flex-direction: column;
-    width: 300px; 
+    width: 500px; 
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.button1 {
+    align-self: flex-start
 }
 
 .someimg {
@@ -47,9 +60,13 @@ h3 {
     border: 2px solid #3882f6;
 }
 
+.randominfo {
+    padding: 0px 100px 50px 100px ;
+}
+
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .info {
     width: 200px;
@@ -58,8 +75,9 @@ h3 {
 button {
     background-color: #3882f6;
     color: white;
-    width: 75px;
     border-radius: 5px;
+    padding: 10px;
+
 }
 
 ul {
@@ -78,16 +96,69 @@ li {
 
 .quote {
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 blockquote {
     font-size: 36px;
     font-style: light italic;
     color: #1F2937;
+    padding: 0px 150px 0px 150px;
+}
+
+figcaption{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-right: 350px;
+    font-size: 24px;
+    align-self: flex-end;
+    margin-top: -50px;
+}
+
+.calltoaction {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882f6;
+    border-radius: 5px;
+    margin: 50px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    width: 1000px;
+}
+
+h4 {
+    margin-bottom: 0;
+}
+.ctatext {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 30px;
+}
+
+.ctabutton {
+    align-self: center;
+    margin-left: auto;
+    margin-right: 50px;
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #E5E7EB;
+    background-color: #1F2937;
+    margin-top: auto;
+    color: #E5E7EB;
+    padding: 20px;
 }
