--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     font-size: 24px;
     padding-left: 125px;
     padding-right: 125px;
+
 }
 
 h2 {
@@ -30,6 +31,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-bottom: 50px;
     gap: 100px;
     background-color: #1F2937;
 }
